--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "build:honeywell-sandbox": "env-cmd -f .env.honeywell-sandbox react-scripts build && mv build build-honeywell-sandbox",
     "build:production": "react-scripts build",
     "build": "react-scripts build",
+    "build:docs": "jsdoc -c jsdoc.config.json -t ./node_modules/clean-jsdoc-theme",
+    "serve:docs": "python3 -m http.server -d ./docs-codebase/okta-client-app/0.1.0",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -106,10 +108,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "better-docs": "^2.7.2",
+    "clean-jsdoc-theme": "^4.1.6",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jsdoc": "^3.6.10",
     "prettier": "^2.6.2"
   }
 }
