--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "okta-client-app",
-  "version": "0.1.0",
+  "name": "opsera-free-trial-client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.1.1",
@@ -24,6 +24,7 @@
     "@okta/okta-react": "^6.4.3",
     "@okta/okta-signin-widget": "^6.2.0",
     "@opsera/dhx-suite-package": "^7.1.2",
+    "@opsera/makeup-and-vanity-set": "file:libraries/@opsera/makeup-and-vanity-set",
     "@types/react-router-dom": "^5.1.7",
     "ace-builds": "^1.4.14",
     "axios": "^0.26.0",
@@ -35,6 +36,7 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
+    "file": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
@@ -72,13 +74,10 @@
     "start-windows": "set PORT=8080 && react-scripts start",
     "build:test": "env-cmd -f .env.test react-scripts build && mv build build-test",
     "build:staging": "env-cmd -f .env.staging react-scripts build && mv build build-staging",
-    "build:freetrial": "env-cmd -f .env.freetrial react-scripts build && mv build build-freetrial",
     "build:kube-generic": "env-cmd -f .env.kube-generic react-scripts build && mv build build-kube-generic",
     "build:kube-dev": "env-cmd -f .env.kube-dev react-scripts build && mv build build-kube-dev",
     "build:kube-test": "env-cmd -f .env.kube-test react-scripts build && mv build build-kube-test",
     "build:kube-prod": "env-cmd -f .env.kube-prod react-scripts build && mv build build-kube-prod",
-    "build:honeywell": "env-cmd -f .env.honeywell react-scripts build && mv build build-honeywell",
-    "build:honeywell-sandbox": "env-cmd -f .env.honeywell-sandbox react-scripts build && mv build build-honeywell-sandbox",
     "build:production": "react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -105,6 +104,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "microbundle": "^0.15.0",
     "prettier": "^2.6.2"
   }
 }
