--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
+    "fast-xml-parser": "^4.0.9",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
