Make buttons visible with dark header

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -83,6 +83,11 @@
       "sizes": "450x193"
     },
     {
+      "src": "img/logos/opsera_bird_infinity_958_547.png",
+      "type": "image/png",
+      "sizes": "958x547"
+    },
+    {
       "src": "img/salesforce/salesforce_logo_white_475x332.png",
       "type": "image/png",
       "sizes": "450x193"
