--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@okta/okta-auth-js": "^6.7.2",
     "@okta/okta-react": "^6.6.0",
     "@okta/okta-signin-widget": "^6.5.0",
+    "@opsera/definitions": "latest",
     "@opsera/dhx-suite-package": "^7.1.2",
+    "@opsera/persephone": "latest",
     "@types/react-router-dom": "^5.1.7",
     "ace-builds": "^1.4.14",
     "axios": "^0.26.0",
