--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@okta/okta-auth-js": "^6.7.2",
     "@okta/okta-react": "^6.6.0",
     "@okta/okta-signin-widget": "^6.5.0",
+    "@opsera/definitions": "latest",
     "@opsera/dhx-suite-package": "^7.1.2",
+    "@opsera/persephone": "latest",
     "@types/react-router-dom": "^5.1.7",
     "ace-builds": "^1.4.14",
     "axios": "^0.26.0",
@@ -63,7 +65,7 @@
     "react-widgets-simple-number": "^5.0.19",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
-    "socket.io-client": "^4.4.1",
+    "socket.io-client": "^4.5.1",
     "text-encoding": "^0.7.0",
     "websocket": "^1.0.34"
   },
@@ -87,6 +89,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines": {
+    "node": ">=16.5.0",
+    "npm": ">=7.5.2"
   },
   "browserslist": {
     "production": [
