--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "scripts": {
     "lint": "eslint --fix --ext .js,.jsx .",
-    "refresh-internal-libraries": "rm -f node_modules/@opsera && npm install",
+    "refresh-internal-libraries": "rm -rf node_modules/@opsera && npm install",
     "start-linux-mac": "npm run refresh-internal-libraries && PORT=8080 react-scripts start",
     "start-windows": "set PORT=8080 && react-scripts start",
     "build:test": "env-cmd -f .env.test react-scripts build && mv build build-test",
