--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/static-toolbar": "^4.1.3",
     "@fortawesome/fontawesome-pro": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -38,6 +40,7 @@
     "date-fns": "^2.28.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
     "env-cmd": "^10.1.0",
     "fast-xml-parser": "^4.0.9",
     "jsonwebtoken": "^8.5.1",
