--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/list": "^1.7.0",
     "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/table": "^2.1.0",
     "@fortawesome/fontawesome-pro": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
