--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
     "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
     "@editorjs/list": "^1.7.0",
     "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.1.0",
     "@fortawesome/fontawesome-pro": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
