[Development tools] Adjusted ES Lint rules to not allow duplicate imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
       "always"
     ],
     "no-unused-vars": "off",
-    "no-duplicate-imports": "warn",
+    "no-duplicate-imports": "error",
     "react/prop-types": "error",
     "react/no-unescaped-entities": "error",
     "react/display-name": "error",
