--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,9 +52,9 @@
     "react/display-name": "error",
     "react/jsx-no-target-blank": "error",
     "no-prototype-builtins": "error",
-    "no-useless-escape": "warn",
+    "no-useless-escape": "error",
     "no-empty-pattern": "error",
-    "no-fallthrough": "warn",
+    "no-fallthrough": "error",
     "react-hooks/exhaustive-deps": "off"
   }
 }
