[Eslint] More aggressive rules to prevent future issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,10 +48,10 @@
     "react/no-unescaped-entities": "error",
     "react/display-name": "error",
     "react/jsx-no-target-blank": "error",
-    "no-prototype-builtins": "warn",
-    "no-useless-escape": "warn",
+    "no-prototype-builtins": "error",
+    "no-useless-escape": "error",
     "no-empty-pattern": "error",
-    "no-fallthrough": "warn",
+    "no-fallthrough": "error",
     "react-hooks/exhaustive-deps": "off"
   }
 }
