--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@fortawesome/pro-thin-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@monaco-editor/react": "^4.4.6",
-    "@nivo/bar": "^0.70.1",
-    "@nivo/calendar": "^0.70.1",
-    "@nivo/core": "^0.70.1",
-    "@nivo/heatmap": "^0.70.1",
-    "@nivo/legends": "^0.70.1",
-    "@nivo/line": "^0.70.1",
-    "@nivo/pie": "^0.70.1",
-    "@nivo/scatterplot": "^0.70.1",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/calendar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/heatmap": "^0.80.0",
+    "@nivo/legends": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
+    "@nivo/scatterplot": "^0.80.0",
     "@okta/okta-auth-js": "^6.7.2",
     "@okta/okta-react": "^6.6.0",
     "@okta/okta-signin-widget": "^6.5.0",
@@ -60,6 +60,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
+    "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^1.6.4",
     "react-csv": "^2.0.3",
     "react-date-range": "^1.1.3",
