--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "ace-builds": "^1.13.1",
     "axios": "^0.26.0",
     "bootstrap": "^4.6.1",
+    "buffer": "^6.0.3",
     "colors": "^1.4.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^8.2.0",
@@ -60,6 +63,8 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^1.6.4",
     "react-csv": "^2.0.3",
     "react-date-range": "^1.1.3",
@@ -71,7 +76,8 @@
     "react-markdown": "8.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "5.0.0",
+    "react-scripts-rewired": "^3.1.1",
     "react-select": "^5.6.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.7.0",
@@ -81,28 +87,30 @@
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "socket.io-client": "^4.5.1",
+    "stream-browserify": "^3.0.0",
     "text-encoding": "^0.7.0",
+    "util": "^0.12.5",
     "websocket": "^1.0.34"
   },
   "scripts": {
     "lint": "eslint --fix --ext .js,.jsx .",
     "refresh-internal-libraries": "rm -rf node_modules/@opsera && npm install",
     "update-lock-file": "rm -rf node_modules/@opsera && rm -rf package-lock.json && npm install",
-    "start-linux-mac": "npm run refresh-internal-libraries && PORT=8080 react-scripts start",
-    "start-windows": "set PORT=8080 && react-scripts start",
-    "build:test": "env-cmd -f .env.test react-scripts build && mv build build-test",
-    "build:staging": "env-cmd -f .env.staging react-scripts build && mv build build-staging",
-    "build:freetrial": "env-cmd -f .env.freetrial react-scripts build && mv build build-freetrial",
-    "build:kube-generic": "env-cmd -f .env.kube-generic react-scripts build && mv build build-kube-generic",
-    "build:kube-dev": "env-cmd -f .env.kube-dev react-scripts build && mv build build-kube-dev",
-    "build:kube-test": "env-cmd -f .env.kube-test react-scripts build && mv build build-kube-test",
-    "build:kube-prod": "env-cmd -f .env.kube-prod react-scripts build && mv build build-kube-prod",
-    "build:honeywell": "env-cmd -f .env.honeywell react-scripts build && mv build build-honeywell",
-    "build:honeywell-sandbox": "env-cmd -f .env.honeywell-sandbox react-scripts build && mv build build-honeywell-sandbox",
-    "build:production": "react-scripts build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start-linux-mac": "npm run refresh-internal-libraries && PORT=8080 react-app-rewired start",
+    "start-windows": "set PORT=8080 && react-app-rewired start",
+    "build:test": "env-cmd -f .env.test react-app-rewired build && mv build build-test",
+    "build:staging": "env-cmd -f .env.staging react-app-rewired build && mv build build-staging",
+    "build:freetrial": "env-cmd -f .env.freetrial react-app-rewired build && mv build build-freetrial",
+    "build:kube-generic": "env-cmd -f .env.kube-generic react-app-rewired build && mv build build-kube-generic",
+    "build:kube-dev": "env-cmd -f .env.kube-dev react-app-rewired build && mv build build-kube-dev",
+    "build:kube-test": "env-cmd -f .env.kube-test react-app-rewired build && mv build build-kube-test",
+    "build:kube-prod": "env-cmd -f .env.kube-prod react-app-rewired build && mv build build-kube-prod",
+    "build:honeywell": "env-cmd -f .env.honeywell react-app-rewired build && mv build build-honeywell",
+    "build:honeywell-sandbox": "env-cmd -f .env.honeywell-sandbox react-app-rewired build && mv build build-honeywell-sandbox",
+    "build:production": "react-app-rewired build",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -124,7 +132,7 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "babel-eslint": "^10.0.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
