--- a/package.json
+++ b/package.json
@@ -113,7 +113,11 @@
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "env": {
+      "browser": true,
+      "node": true
+    }
   },
   "engines": {
     "node": ">=16.5.0",
